<resources>
    <string name="app_name">Ghair</string>
    <string name="map_api_key">AIzaSyArjmbYWTWZhDFFtPOLRLKYwjtBDkOEGrY</string>
    <string name="home">Home</string>
    <string name="adversiment">Adversiment </string>
    <string name="services">Services</string>
    <string name="no_services">No Services</string>
    <string name="no_most_active">No Most active</string>
    <string name="most_active">Most active</string>
    <string name="merchant_name">Merchant name</string>
    <string name="the_highest_price">the highest price</string>
    <string name="expiry_date">Expiry date</string>
    <string name="selling_price">selling price</string>
    <string name="auction">Auction</string>
    <string name="my_orders">My Orders</string>
    <string name="more">More</string>
    <string name="required">Required</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_auction">Add Auction</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="auction_end_time">Auction End Time</string>
    <string name="auction_starting_price">Auction starting price</string>
    <string name="product_image">Product Image</string>
    <string name="add">Add</string>
    <string name="the_name_of_piece">the name of piece</string>
    <string name="model">Model</string>
    <string name="amount">Number</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="news">New</string>
    <string name="used">used</string>
    <string name="service_require">Service Require</string>
    <string name="require">Require</string>
    <string name="markets">Markets</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="searsh">Searsh</string>
    <string name="accessories">Accessories</string>
    <string name="products">Products</string>
    <string name="name">Name</string>
    <string name="market_profile">Market Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="sign_up2">Create Account</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="new_user">Create new Account</string>
    <string name="register_a_customer">Register a customer</string>
    <string name="the_name_is_triple">The name is triple</string>
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="accept_terms_and_conditions">Accept Terms And Conditions</string>
    <string name="register_a_marketer_or_service_provider">Register a Marketer or service provider</string>
    <string name="national_number">National Number</string>
    <string name="user_name">User Name</string>
    <string name="location">Location</string>
    <string name="logo_image">Logo Image</string>
    <string name="about_app">About App</string>
    <string name="my_auction">My Auction</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_information">Edit Information</string>
    <string name="banks_account">Banks Account</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="detials">Detials</string>
    <string name="cart">cart</string>
    <string name="offers">Offers</string>
    <string name="add_offer">Add Offer</string>
    <string name="auction_detials">Auction Detials</string>
    <string name="profile">Profile</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="my_services">My Services</string>
    <string name="front_car_detection">Front car detection</string>
    <string name="honda_2020_unveiled">Honda 2020 unveiled</string>
    <string name="properties">Properties</string>
    <string name="rain_resistant">Rain resistant</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="prodyct_detials">Prodyct Detials</string>
    <string name="add_product">Add Product</string>
    <string name="product_type">Product Type</string>
    <string name="desc">Description</string>
    <string name="product_price">Product Price</string>
    <string name="something">Check internet connection</string>
    <string name="no_brands_found">No Brands Found</string>
    <string name="field_req">Field required</string>
    <string name="pass_short">Password to short</string>
    <string name="wait">Wait...</string>
    <string name="inc_phone_pas">Incorrect phone amount or password</string>
    <string name="ch_city">Choose city</string>
    <string name="please_accept_terms">Please Accept Terms And Condition</string>
    <string name="user_exists">User Exists</string>
    <string name="ch_service">Choose Service</string>
    <string name="english_title">English Title</string>
    <string name="arabic_title">Arabic Title</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="perm_camera_denied">Permission Camera denied</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="inv_email">Invalid Email</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="message">Message</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_brand">Choose Brand</string>
    <string name="ch_type">Choose Type</string>
    <string name="suc">Success</string>
    <string name="start_price">Start Price :</string>
    <string name="no_auction_to_display">No Auction To Display</string>
    <string name="no_products">No Products To Display</string>
    <string name="no_catogry_to_display">No Catogry To Display</string>
    <string name="no_market_to_display">No Market To Display</string>
    <string name="categories">Categories</string>
    <string name="no_categroies_to_display">No Categroies To Display</string>
    <string name="ch_cat">Choose Catogry</string>
    <string name="product_name_en">Product Name (English)</string>
    <string name="product_name_ar">Product Name (Arabic)</string>
    <string name="catogry">Catogry</string>
    <string name="english_descreption">English Descreption</string>
    <string name="arabic_description">Arabic Description</string>
    <string name="banners">Banners</string>
    <string name="ch_baner">Choose Banners</string>
    <string name="your_request_send_suc">Your Request Send Sucsses please wait we will check it</string>
    <string name="share">share App</string>
    <string name="market">Market</string>
    <string name="total">Total :</string>
    <string name="real">R.S</string>
    <string name="chat">chat</string>
    <string name="no_conversation">No Conversation</string>
    <string name="completer_order">Completer Order</string>
    <string name="type_amessage">Type Amessage</string>
    <string name="offerless">Offer Less Than other Offers</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="no_order_found">No Order Found</string>
    <string name="client_only_can_order">Client Only Can Order</string>
    <string name="other_auction">Other Auction</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="my_products">My Products</string>
    <string name="enter_code">Enter Code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="inc_phone">Incorrect Phone</string>

</resources>
