<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lang_shape"
        >

        <EditText
            android:id="@+id/edtstprice"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:singleLine="true"
            android:background="@drawable/edt_shape_dialog"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/gray4"
            android:textColor="@color/input"
            android:textSize="13sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/cursor_bg"

            android:hint="@string/price"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/edtdetials"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:singleLine="true"
            android:background="@drawable/edt_shape_dialog"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/gray4"
            android:textColor="@color/input"
            android:textCursorDrawable="@drawable/cursor_bg"

            android:textSize="13sp"
            android:padding="8dp"
            android:gravity="top"
android:hint="@string/detials"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/add"
            android:background="@drawable/btn_price_shape"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>
</layout>
