<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/white">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:riv_border_color="@color/colorPrimary"
            app:riv_border_width="1px"
            app:riv_corner_radius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:src="@drawable/shiop"

            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/image"
    app:layout_constraintBottom_toBottomOf="@+id/image"
    android:background="@drawable/cons_shape"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="8dp"



    >
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="8dp"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="@string/merchant_name"
        android:textColor="@color/input"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="Mohamed"
        android:textColor="@color/color_bg"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:paddingLeft="13dp"
    android:paddingRight="13dp"
    android:text="@string/the_highest_price"
    android:textColor="@color/input"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="100"
        android:textColor="@color/color_bg"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="8dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/expiry_date"
            android:textColor="@color/input"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="03:40:50"
            android:textColor="@color/color_bg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/selling_price"
            android:textColor="@color/input"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="100"
            android:textColor="@color/color_bg"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>