<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.endpoint.ghair.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/input"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("en")?180:0}'
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/add_product"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/input"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_shape"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/product_name"
                        android:textColor="@color/input"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/white"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:singleLine="true"
                            android:textColor="@color/input"
                            android:textColorHint="@color/gray4"
                            android:textSize="13sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"

                            android:background="@color/input" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/product_type"
                        android:textColor="@color/input"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:id="@+id/edtstprice"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/white"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:singleLine="true"
                            android:textColor="@color/input"
                            android:textColorHint="@color/gray4"
                            android:textSize="13sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"

                            android:background="@color/input" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/price"
                        android:textColor="@color/input"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/white"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:singleLine="true"
                            android:textColor="@color/input"
                            android:textColorHint="@color/gray4"
                            android:textSize="13sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="30dp"
                            android:background="@color/input"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/desc"
                    android:textColor="@color/input"
                    android:textSize="13sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edt_shape_dialog"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textColor="@color/input"
                    android:textColorHint="@color/gray4"
                    android:textSize="13sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/product_image"
                    android:textColor="@color/input"
                    android:textSize="13sp" />


                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="150dp"
                    android:background="@drawable/edt_shape_dialog"
                    android:padding="8dp">


                </LinearLayout>


                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_price_shape"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/confirm_order"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
